<resources>
    <string name="app_name">SuperBancoImobiliarioDMO</string>
    <string name="valor_banco">Valor para Transferência</string>
    <string name="pagar_ao_banco">Pagar ao Banco</string>
    <string name="receber_do_banco">Receber do Banco</string>
    <string name="bonus_rodada">Receber Valor por Rodada Finalizada</string>
    <string name="cartao_payer">Cartão Payer (ID)</string>
    <string name="cartao_receiver">Cartão Receiver (ID)</string>
    <string name="realizar_transferencia">Realizar Transferência entre Cartões</string>
    <string name="cartaobonus">Cartão para Bônus</string>
    <string name="resultado">Resultado</string>
</resources>